tests/baselines/reference/parserErrorRecovery_LeftShift1.errors.txt
==== tests/cases/compiler/parserErrorRecovery_LeftShift1.ts (3 errors) ====
    retValue = bfs.VARIABLES >> );
                                ~
!!! parserErrorRecovery_LeftShift1.ts(1,29): error TS1003: Identifier expected.
    ~~~~~~~~
!!! parserErrorRecovery_LeftShift1.ts(1,1): error TS2095: Cannot find name 'retValue'.
               ~~~
!!! parserErrorRecovery_LeftShift1.ts(1,12): error TS2095: Cannot find name 'bfs'.